# noor-framework

./: .dockerignore  .env.example  .gitignore  ADVANCED_FEATURES.md  API_REFERENCE.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DEPLOYMENT.md  Dockerfile  Dockerfile.alpine  Dockerfile.dev  ENTERPRISE_PATTERNS.md  LICENSE  MIGRATIONS_GUIDE.md  PATTERNS.md  QUICKSTART.md  README.md  SECURITY.md  build.rs  docker-compose.dev.yml  docker-compose.yml  noor.toml  package.json
.github/workflows/: ci-cd.yml
benchmarks/: framework_benchmarks.rs
database/migrations/: 20260710_000001_create_users_table.sql  20260710_000002_create_posts_table.sql  20260710_000003_create_categories_table.sql  20260710_000004_create_comments_table.sql  20260710_000005_create_tags_table.sql  20260710_000006_create_sessions_table.sql  20260710_000007_create_password_resets_table.sql  20260710_000008_create_audit_logs_table.sql
database/seeders/: 001_users.sql  002_categories.sql  003_tags.sql  004_posts.sql  005_comments.sql
docker/: nginx.conf
docker/grafana/: dashboards.yml  datasources.yml
docker/prometheus/: alerts.yml  prometheus.yml
examples/: admin_generator.rs  auth_rate_limit.rs  caching.rs  dependency_injection.rs  design_patterns.rs  enterprise_patterns.rs  events_queue.rs  feature_flags.rs  file_upload.rs  fullstack_smoke.rs  http_client.rs  i18n.rs  live_demo.rs  multi_tenancy.rs  notifications.rs  openapi_docs.rs  rest_api.rs  rest_api_db.rs  security.rs  sessions_templates.rs  test_doubles.rs  webhooks.rs  websocket_chat.rs
k8s/: production.yml
lang/: ar.json  en.json
public/css/: noor.css
public/dashboards/: admin.html  health.html  jobs.html  logs.html
public/js/: noor.js
resources/views/layouts/: app.hbs
resources/views/pages/: dashboard.hbs  form.hbs
resources/views/partials/: post_card.hbs
src/: lib.rs
src/core/: application.rs  cli.rs  config.rs  context.rs  error.rs  logger.rs  mod.rs  router.rs  server.rs
src/core/accessors/: mod.rs
src/core/admin/: mod.rs
src/core/advanced_query/: mod.rs
src/core/api_gateway/: mod.rs
src/core/assets/: mod.rs
src/core/audit/: mod.rs
src/core/auth/: guard.rs  jwt.rs  mod.rs  rbac.rs  session.rs
src/core/backup/: mod.rs
src/core/brotli/: mod.rs
src/core/cache/: file.rs  manager.rs  memory.rs  mod.rs
src/core/circuit_breaker/: mod.rs
src/core/command/: mod.rs
src/core/config_manager/: mod.rs
src/core/console/: mod.rs
src/core/container/: mod.rs
src/core/cookies/: mod.rs
src/core/cqrs/: mod.rs
src/core/csp/: mod.rs
src/core/distributed_lock/: mod.rs
src/core/dto/: mod.rs
src/core/env/: mod.rs
src/core/error_pages/: mod.rs
src/core/event_sourcing/: mod.rs
src/core/events/: mod.rs
src/core/factory_advanced/: mod.rs
src/core/features/: mod.rs
src/core/file_watcher/: mod.rs
src/core/form_request/: mod.rs
src/core/graphql/: mod.rs
src/core/health/: mod.rs
src/core/http/: method.rs  mod.rs  request.rs  response.rs  status.rs
src/core/http_client/: mod.rs
src/core/i18n/: mod.rs
src/core/idempotency/: mod.rs
src/core/image/: mod.rs
src/core/key_rotation/: mod.rs
src/core/logging_drivers/: mod.rs
src/core/mail/: mod.rs
src/core/metrics/: mod.rs
src/core/middleware/: auth.rs  compression.rs  cors.rs  helmet.rs  logging.rs  mod.rs  throttle.rs
src/demo/: mod.rs
src/zig/: noor_zig.zig
tests/: advanced_tests.rs  cli_tests.rs  http_tests.rs  integration_tests.rs  middleware_tests.rs  session_tests.rs
(+69 files in other folders)
