# ============================================================
# Noor Framework - Cargo Configuration
# إطار عمل نور - إعدادات Cargo
# ============================================================
# Noor is a high-performance, secure, fullstack MVC framework
# built with Rust core and Zig performance modules.
#
# نور هو إطار عمل متكامل وسريع وآمن مبني بلغة Rust مع
# مكونات Zig عالية الأداء.
# ============================================================

[package]
name = "noor"
version = "1.0.0"
edition = "2021"
rust-version = "1.96"
authors = ["Noor Framework Contributors"]
license = "MIT"
description = "A high-performance, secure, fullstack MVC web framework - إطار عمل ويب عالي الأداء وآمن"
homepage = "https://github.com/noor-framework/noor"
repository = "https://github.com/noor-framework/noor"
documentation = "https://noor-framework.github.io/docs"
readme = "README.md"
keywords = ["web", "framework", "mvc", "async", "security"]
categories = ["web-programming", "frameworks"]

[lib]
name = "noor"
path = "src/lib.rs"

[[bin]]
name = "noor"
path = "src/bin/noor.rs"

[[bin]]
name = "noor-server"
path = "src/bin/server.rs"

[features]
default = ["full"]
full = ["orm", "auth", "cli"]
orm = ["sqlx"]
auth = ["jsonwebtoken", "argon2"]
cli = ["clap"]
# Weak-server mode: minimize memory, file-based cache, no Redis
weak-server = ["full"]
# Production optimizations
production = []

[dependencies]
# ===== Core async runtime =====
tokio = { version = "1.36", features = ["full"] }
futures = "0.3"
async-trait = "0.1"

# ===== HTTP server =====
hyper = { version = "1.2", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
bytes = "1.5"
url = "2.5"
mime = "0.3"

# ===== Serialization =====
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_urlencoded = "0.7"
toml = "0.8"

# ===== Templating =====
handlebars = "5.1"

# ===== ORM / Database =====
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite", "postgres", "mysql", "macros", "chrono", "uuid", "any"], optional = true }

# ===== Security =====
jsonwebtoken = { version = "9.2", optional = true }
argon2 = { version = "0.5", optional = true }
rand = "0.8"
ring = "0.17"
hex = "0.4"
base64 = "0.21"
constant_time_eq = "0.3"

# ===== Logging & Tracing =====
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# ===== Error handling =====
thiserror = "1.0"
anyhow = "1.0"

# ===== CLI =====
clap = { version = "4.5", features = ["derive"], optional = true }

# ===== Utilities =====
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.7", features = ["v4", "serde"] }
once_cell = "1.19"
parking_lot = "0.12"
regex = "1.10"
walkdir = "2.5"
glob = "0.3"
sha2 = "0.10"
crc32fast = "1.4"

# ===== Compression (for weak servers) =====
flate2 = "1.0"
tar = "0.4"

[build-dependencies]
# Build the Zig performance modules
cc = "1.0"

[dev-dependencies]
tempfile = "3.10"
reqwest = { version = "0.11", features = ["json", "blocking", "cookies"] }
tokio = { version = "1", features = ["full"] }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
# Smaller binary for weak servers
overflow-checks = false

[profile.dev]
opt-level = 0
debug = true

[profile.weak-server]
inherits = "release"
opt-level = "z"  # Optimize for size
lto = true
codegen-units = 1
strip = true
